...
    tools:context=".map.ItineraryActivity">



  <com.sothree.slidinguppanel.SlidingUpPanelLayout
      xmlns:sothree="http://schemas.android.com/apk/res-auto"
      android:id="@+id/sliding_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:background="#FDF6EC"
      sothree:umanoPanelHeight="68dp"
      sothree:umanoShadowHeight="0dp">
...
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="99dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slidingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        >

...
          app:layout_constraintHorizontal_bias="0.907"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/redirect"
          app:layout_constraintVertical_bias="0.045" />

      <TextView
          android:id="@+id/itinerary"
          android:layout_width="wrap_content"
          android:layout_height="45dp"
          android:layout_marginTop="0dp"
          android:fontFamily="@font/rubikone"
          android:text="Itinerary"
          android:textColor="#11CA9D"
...
