<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF6EC"
    tools:context=".planning.PlanActivity">

    <TextView
        android:id="@+id/readyText"
        android:layout_width="304dp"
        android:layout_height="104dp"
        android:fontFamily="@font/rubikone"
        android:text="Ready to get started?"
        android:textAlignment="center"
        android:textColor="#11CA9D"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/uscButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />


    <ImageView
        android:id="@+id/uscButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="58dp"
        android:backgroundTint="#FDF6EC"
        android:fontFamily="@font/ruda"
        android:rotation="-15"
        android:text="USC Tour"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/uscpolaroid" />

    <ImageView
        android:id="@+id/laButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="#FDF6EC"
        android:elevation="0dp"
        android:fontFamily="@font/ruda"
        android:foreground="?attr/selectableItemBackground"
        android:rotation="15"
        android:stateListAnimator="@null"
        android:text="LA Tour"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uscButton"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/lapolaroid" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="66dp"
        android:layout_height="43dp"
        android:layout_marginEnd="318dp"
        app:layout_constraintBottom_toTopOf="@+id/readyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>