...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newitinerary"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginStart="298dp"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="38dp"
...
